--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -55507,6 +55507,9 @@
         }
       }
     },
+    "Not started" : {
+
+    },
     "Not supported for this camera" : {
       "localizations" : {
         "de" : {
@@ -74394,6 +74397,9 @@
         }
       }
     },
+    "Streaming" : {
+
+    },
     "Streaming history" : {
       "localizations" : {
         "de" : {
@@ -83363,9 +83369,6 @@
           }
         }
       }
-    },
-    "Unknown device state" : {
-
     },
     "Unknown recording state." : {
       "localizations" : {
