--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -66312,6 +66312,9 @@
         }
       }
     },
+    "Select device" : {
+
+    },
     "Select image" : {
       "localizations" : {
         "de" : {
