--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -5413,6 +5413,9 @@
         }
       }
     },
+    "⚠️ The RTMP server is not enabled" : {
+
+    },
     "🎉 You are LIVE at %@ 🎉" : {
       "localizations" : {
         "de" : {
