Do not filter out streamer mentions.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -28462,7 +28462,7 @@
         }
       }
     },
-    "Do not say messages that contains mentions." : {
+    "Do not say messages that contains mentions, except when you are mentioned." : {
 
     },
     "Do not share your settings with anyone as they may contain sensitive data (stream keys, etc.)!" : {
