--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -30025,7 +30025,11 @@
         }
       }
     },
+    "Enable manual FPS to force given FPS. This is needed when the publisher does not provide accurate timestamps. B-frames does not work with manual FPS." : {
+
+    },
     "Enable manual FPS to force given FPS. This is needed when the publisher does not provide accurate timestamps. B-frames does not work with manual FPS. Manual FPS is typically needed for DJI devices." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
