Text widget suggestions.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -82433,6 +82433,9 @@
         }
       }
     },
+    "Suggestions" : {
+
+    },
     "Summary and stream name" : {
       "localizations" : {
         "de" : {
